# ai-agents-beyond-jupyter-notebook

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  flowchart.excalidraw  pyproject.toml  requirements.txt  run.py  run_worker.py
src/: config.py  database.py  main.py  worker.py
src/agents/: agent_guardrail.py  agent_tools.py  guardrail.py  hooks.py  main_agent.py  state_manager.py  user_context.py
src/routes/: health.py  telegram.py
src/tasks/: telegram_tasks.py
src/utils/: redis_client.py  telegram.py
